--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <div>
         <h1>Hello there, <span></span></h1>
         <h1>Welcome to my <span></span></h1>
-        <h1>website <span></span></h1>
+        <h1>portfolio <span></span></h1>
         <!-- <h1> <span></span></h1> -->
        
       </div>
@@ -123,7 +123,7 @@
       </div>
       <div class="col-right">
         <h1 class="section-title">Ab<span>o</span>ut <span>me</span></h1>
-        <h2 style="color:white; " > Programmer, Roboticist & Cognitive AI enthusiastic </h2>
+        <h2 style="color:white; " > Cognitive Computing, Machine Learning & Deep Learning Enthusiast, Programmer & Roboticist </h2>
         <p style="color:white; font-family: Montserrat; font-size: 1.5rem;"> “Any fool can write code that a computer can understand. Good programmers write code that humans can understand.”<br>    &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;       – Martin Fowler  </p>
         <a href="https://drive.google.com/file/d/163hpa0DG9E64Ll9XxvFhtIx8YDca2TU8/view?usp=sharing" class="cta" style="color:white;"" >Download Resume</a>
       </div>
@@ -260,12 +260,12 @@
         <div class="nlp-item">
           <div class="icon"><img src="./ico/nlp.svg"/></div>
           <h2>Natural Language Processing</h2>
-          <p>Level : Beginner</p>
+          <p>Level : Intermidiate</p>
         </div>
         <div class="dp-item">
           <div class="icon"><img src="./ico/database.svg"/></div>
           <h2>Database Programming</h2>
-          <p>Level : Beginner</p>
+          <p>Level : Intermidiate</p>
         </div>
         <div class="sa-item">
           <div class="icon"><img src="./ico/cms.svg"/></div>
