--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
           <div class="project-info">
             <h1>Fightbot</h1>
             <h2>Human Control Fighting Robot</h2>
-            <p>Basically we (X-Treme) made this type robot for the Battle bot competition. We made various type of robot based on the Requirement like weight 6-15 kg.</p>
+            <p>We (X-Treme) made this type robot for the Battle bot competition. We made various type of robot based on the Requirement like weight 6-15 kg.</p>
           </div>
           <div class="project-img">
             <img src="./img/bat.jpg" alt="img">
@@ -365,7 +365,7 @@
           <div class="project-info">
             <h1>Battlebot</h1>
             <h2>Remote Control Weaponized Fighting Robot </h2>
-            <p>Basically we (X-Treme) made this type robot for Advanced Battle bot competition like weaponized battle bot competetion . We made various type of robot based on the Requirement like weight 6-15 kg.</p>
+            <p>We (X-Treme) made this type robot for Advanced Battle bot competition like weaponized battle bot competetion . We made various type of robot based on the Requirement like weight 6-15 kg.</p>
           </div>
           <div class="project-img">
             <img src="./img/debt.jpg" alt="img">
@@ -375,7 +375,7 @@
           <div class="project-info">
             <h1>Soccerbot</h1>
             <h2>Human Control Soccerbot</h2>
-            <p>Basically we (X-Treme) made this type of robot for soccer bot competition.</p>
+            <p>We (X-Treme) made this type of robot for soccer-bot competition. The bot is able to push and crush down opponent robot and make goal with a tennis ball.</p>
           </div>
           <div class="project-img">
             <img src="./img/socer.png" alt="img">
