--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
         <div class="ml-item">
    
           <h2>FINDING PATH USING REINFORCEMENT LEARNING</h2>
-          <a href="https://github.com/smn06/RL" target="_blank"> <p>link</p> </a>
+          <a href="https://github.com/smn06/reinforcement_learning" target="_blank"> <p>link</p> </a>
         </div>
         
         <div class="ml-item">
@@ -528,7 +528,12 @@
         <div class="ml-item">
  
           <h2>GPS MAP RECONSTRACTION FOR PATHFINDER BOT</h2>
-          <a href="https://github.com/smn06/RL" target="_blank"> <p>link</p> </a>
+          <a href="https://github.com/smn06/reinforcement_learning" target="_blank"> <p>link</p> </a>
+        </div>
+       <div class="ml-item">
+ 
+          <h2>REAL-TIME FRAME BY FRAME IMAGE CAPTION GENERATOR</h2>
+          <a href="https://github.com/smn06/Caption_Generator" target="_blank"> <p>link</p> </a>
         </div>
         <div class="ml-item">
          
