--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     <div class="about container">
       <div class="col-left">
         <div class="about-img">
-          <img src="./img/img-2.png"alt="img">
+          <img src="./img/201.png"alt="img">
         </div>
       </div>
       <div class="col-right">
