--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
           <div class="project-info">
             <h1>GPS Guided Drone</h1>
             <h2>Full-Autonomous GPS guided Drone using ArduCopter</h2>
-            <p>This drone is updated version of our first drone . This drone can fly only with the help of GPS co-ordinators.(inputs were given from computer) </p>
+            <p>This drone is updated version of our first drone. This drone can fly only with the help of GPS co-ordinators.(inputs were given from computer) </p>
           </div>
           <div class="project-img">
             <img src="./img/gps.jpg" alt="img">
@@ -431,7 +431,7 @@
             <p>This UAV is fully-autonomous, ROS operated, and can be operated by only giving GPS co-ordinators. </p>
           </div>
           <div class="project-img">
-            <img src="./img/rov.jpg" alt="img">
+            <img src="./img/rover.jpg" alt="img">
           </div>
         </div>
         
