--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="timeline-item-inner outer-shadow">
                   <i class="fas fa-graduation-cap icon"></i>
                   <span>2014-2016</span>
-                  <h3>HSC</h3>
+                  <h3>Higher Secondary Certificate</h3>
                   <h4>Bangladesh Navy School & College Chittagong</h4>
                   <p>GPA 5.00</p>
                 </div>
@@ -170,7 +170,7 @@
                 <div class="timeline-item-inner outer-shadow">
                   <i class="fas fa-graduation-cap icon"></i>
                   <span>2012-2014</span>
-                  <h3>SSC</h3>
+                  <h3>Secondary School Certificate</h3>
                   <h4>Bangladesh Navy School & College Kaptai</h4>
                   <p>GPA 5.00</p>
                 </div>
