--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
         
         <div class="ml-item">
    
-          <h2>FINDING PATH USING REINFORCEMENT LEARNING</h2>
+          <h2>PATH-FINDER BOT USING REINFORCEMENT LEARNING</h2>
           <a href="https://github.com/smn06/reinforcement_learning" target="_blank"> <p>link</p> </a>
         </div>
         
